增加搜寻日志并下载的功能

--- a/index.html
+++ b/index.html
@@ -1569,6 +1569,27 @@
 
         }
 
+        function download_all_logs() {
+            function search_log_and_download(path) {
+                let children = FS.readdir(path);
+                for (const child of children) {
+                    if (child.startsWith('.')) {
+                        continue;
+                    }
+                    let p = `${path}/${child}`;
+                    if (FS.isFile(FS.lookupPath(p).node.mode)) {
+                        // 搜寻所有命名为log.txt的日志文件，下载下来
+                        if (child === 'log.txt') {
+                            console.log(`Start download log:${p}`);
+                            download_browser_file(p, FS.readFile(p, { encoding: 'utf8' }));
+                        }
+                        continue;
+                    }
+                    search_log_and_download(p);
+                }
+            }
+            search_log_and_download('/user_data/carts');
+        }
 
         var help_about = `
     Welcome to <span style="font-weight:bold; color:#09f">PICO-8 Education Edition</span>!<br>
@@ -3211,6 +3232,7 @@
     <div style="width:320px; display:table; top:0px; position:absolute">
         <img id="zoot" onclick="bunny_hide_or_say(help_index);" src="/gfx/zoot_idle.gif" style="cursor:pointer; display:table; width:48px; height:48px;
     max-width:6vw; max-height:6vw; margin:4px">
+        <button type="button" onclick="download_all_logs()">Download all logs</button>
 
         <div id="speech_bubble"
             style="display:none; min-width:200px; max-width:80vw; background-color:#fff0e8; float:left; padding:16px; color:#222; border-radius: 10px; margin-left:10px;">
